[package]
name = "bevypr"
version = "0.1.0"
edition = "2024"
authors = ["Saad Moazzam"]

[lib]
name = "bevypr"
path = "src/lib.rs"
crate-type = [
    "staticlib",
    "cdylib",
    "rlib"
]

[[bin]]
name = "bevypr"
path = "src/main.rs"

[dependencies]
bevy = "0.15.2"
bevy_panorbit_camera = "0.24.0"

[profile.release]
panic = "abort"
opt-level = 3
